<resources>
    <string name="app_name">What\'s For Dinner?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_recipe">Recipe...</string>
    <string name="button_save">Save</string>
    <string name="empty_recipe_not_saved">Recipe not saved because it is empty</string>
    <string name="label_recipe">Recipe</string>
    <string name="label_preparation_time">Preparation Time</string>
    <string name="label_cookingtime">Cooking Time</string>
    <string name="label_website">Website</string>
    <string name="label_instructions">Instructions</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_picture">Picture</string>
    <string name="add_recipe">Add A New Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="title_activity_categories_list">CategoriesListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="label_category_name">Category Name</string>
    <string name="label_image">Image</string>
    <string name="label_categories">Categories</string>

</resources>
