<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:padding="@dimen/small_padding"
        android:text="@string/add_recipe"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:maxWidth="@dimen/label_width"
            android:minWidth="@dimen/label_width"
            android:text="@string/label_recipe"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/recipe_name"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/label_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:minWidth="@dimen/label_width"
            android:maxWidth="@dimen/label_width"
            android:text="@string/label_preparation_time"/>
        <EditText
            android:id="@+id/preparation_time"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/label_preparation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/label_width"
            android:maxWidth="@dimen/label_width"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/label_cookingtime"/>
        <EditText
            android:id="@+id/cooking_time"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/label_cookingtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/label_width"
            android:maxWidth="@dimen/label_width"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/label_website"/>
        <EditText
            android:id="@+id/website_url"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:hint="@string/label_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/label_width"
            android:maxWidth="@dimen/label_width"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/label_categories"/>
        <com.sayantan.advancedspinner.MultiSpinner
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/label_width"
            android:maxWidth="@dimen/label_width"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/label_image"/>
        <ImageView
            android:id="@+id/recipe_image"
            android:hint="@string/label_website"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/editbox_background"
            android:onClick="showImagePickerDialog"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:textColor="@color/buttonLabel" />
</LinearLayout>

